# pixel-art-franka

./: CHANGELOG.rst  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  franka.repos  pad_pose_publisher.py  peepee.py  peripheral_pose_publisher.py  task_planner.py
franka_bringup/: CMakeLists.txt  package.xml
franka_bringup/config/: controllers.yaml
franka_bringup/launch/: cartesian_elbow_example_controller.launch.py  cartesian_orientation_example_controller.launch.py  cartesian_pose_example_controller.launch.py  cartesian_velocity_example_controller.launch.py  elbow_example_controller.launch.py  franka.launch.py  gravity_compensation_example_controller.launch.py  gripper_example_controller.launch.py  (+6 more)
franka_example_controllers/: package.xml
franka_fr3_moveit_config/: CMakeLists.txt  package.xml
franka_fr3_moveit_config/config/: fr3_ros_controllers.yaml
franka_fr3_moveit_config/launch/: move_group.launch.py  moveit.launch.py
franka_fr3_moveit_config/srdf/: fr3_arm.srdf.xacro  fr3_arm.xacro  fr3_arm_hand.xacro  group_definition.xacro  hand.xacro
franka_fr3_moveit_config/test/: srdf_tests.py
franka_gazebo/: README.md
franka_gripper/: package.xml
franka_hardware/: package.xml
franka_msgs/: package.xml
franka_robot_state_broadcaster/: package.xml
franka_ros2/: package.xml
franka_semantic_components/: package.xml
input_processing/: grid_locations_colour.npy  grid_locations_colour_t2.npy  grid_locations_colour_t3.npy  input_parser_mvp.py  parser_test1.py  test_discretization.py
integration_launch_testing/: package.xml
(+21 files in other folders)
